# app/Modules/Auth/Presentation/Http/Controllers/Controller.php
@@ -27,18 +27,10 @@ use App\Modules\Auth\Domain\Exceptions\Error\ExceptionUnprocessedObject;
  *     )
  * ),
  *
- * @OA\Schema(
- *    schema="BearerToken",
- *    title="Bearer Token Object",
- *    @OA\Property(property="access_token", type="string", example="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vMTI3LjAuMC4xOjgwMDAvYXBpL2F1dGgvbG9naW4iLCJpYXQiOjE3MTQwMDMwNTcsImV4cCI6MTcxNDAwNjY1NywibmJmIjoxNzE0MDAzMDU3LCJqdGkiOiJaampTNWRmOHZtdHNZbWJ0Iiwic3ViIjoiMSIsInBydiI6IjRhNmUyNTJkNDljYzM1ZjlhNmQyODk3ZmRlNGY5MzE0NmU3YzgwMmMifQ.6J4NAHBKlRIG5ZAtgIwXHuToFnG1mCCXwgxrf6rL9DY"),
- *    @OA\Property(property="token_type", type="number", example="Bearer"),
- *    @OA\Property(property="expires_in", type="integer", example="3600"),
- * ),
- *
  *
  * @OA\Schema(
  *    schema="OrderUnitResource",
- *    title="Order Unit json Resource",
+ *    title="Json Ресурс Order Unit",
  *    @OA\Property(property="id", type="string", format="uuid"),
  *    @OA\Property(property="delivery_start", type="string", format="date-time"),
  *    @OA\Property(property="delivery_end", type="string", format="date-time"),
@@ -55,7 +47,7 @@ use App\Modules\Auth\Domain\Exceptions\Error\ExceptionUnprocessedObject;
  *
  * @OA\Schema(
  *    schema="AdressResource",
- *    title="Адрес json Ресурс",
+ *    title="Json Ресурс Адресса",
  *    @OA\Property(property="id", type="integer", format="int64"),
  *    @OA\Property(property="region", type="string"),
  *    @OA\Property(property="city", type="string"),
@@ -71,7 +63,7 @@ use App\Modules\Auth\Domain\Exceptions\Error\ExceptionUnprocessedObject;
  *
  * @OA\Schema(
  *    schema="OrganizationResource",
- *    title="Ресурс Организации",
+ *    title="Json Ресурс Организации",
  *    @OA\Property(property="owner_id", type="integer", format="int64"),
  *    @OA\Property(property="name", type="string"),
  *    @OA\Property(property="address", ref="#/components/schemas/AdressResource"),
@@ -87,6 +79,19 @@ use App\Modules\Auth\Domain\Exceptions\Error\ExceptionUnprocessedObject;
  *    @OA\Property(property="kpp", type="string"),
  *    @OA\Property(property="registration_number", type="string"),
  *    @OA\Property(property="registration_number_individual", type="string"),
+ * ),
+ *
+ * @OA\Schema(
+ *    schema="TransferResource",
+ *    title="Ресурс Трансфера",
+ *    @OA\Property(property="transport_id", type="integer", format="int64"),
+ *    @OA\Property(property="delivery_start", type="string", format="date-time"),
+ *    @OA\Property(property="delivery_end", type="string", format="date-time"),
+ *    @OA\Property(property="adress_start_id", ref="#/components/schemas/AdressResource"),
+ *    @OA\Property(property="adress_end_id", ref="#/components/schemas/AdressResource"),
+ *    @OA\Property(property="order_total", type="number", format="float"),
+ *    @OA\Property(property="description", type="string"),
+ *    @OA\Property(property="body_volume", type="number", format="float"),
  * ),
  *
  *
